# pragma

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PRAGMA.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  logging.py  main.py  worker.py
backend/app/db/: base.py  session.py  tables.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_init.py
backend/app/ingestion/: __init__.py  normalizer.py
backend/app/models/: audit.py  document.py  guardrail.py  skill.py
backend/app/providers/: __init__.py  embeddings.py  llm.py
backend/app/retrieval/: hybrid.py
backend/tests/: conftest.py  test_config.py  test_health.py  test_logging.py
backend/tests/db/: test_schema.py
backend/tests/ingestion/: test_normalizer.py
backend/tests/models/: test_document.py  test_guardrail.py  test_skill.py
backend/tests/providers/: test_llm.py
backend/tests/retrieval/: test_hybrid.py
docs/: BUILD_PLAN.md  LEARN_PHASE_0_1.md  architecture-demo.html
