[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pragma"
version = "0.1.0"
description = "Company intelligence, executable — knowledge + agent action layer."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pgvector",
    "alembic",
    "celery[redis]",
    "redis",
    "pydantic>=2",
    "pydantic-settings",
    "loguru",
    "httpx",
    "anthropic",
    "voyageai",
    "openai",
    "stripe",
    "slack_sdk",
    "githubkit",
    "notion-client",
    "hdbscan",
    "numpy",
    "langchain-text-splitters",
    "cryptography",
    "argon2-cffi",
    "circuitbreaker",
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "testcontainers[postgres]",
    "respx",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, UP = pyupgrade, B = bugbear, ASYNC = async pitfalls
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
